[gd_scene load_steps=5 format=3 uid="uid://bjotm3lts288c"]

[ext_resource type="Theme" uid="uid://dgs8leglpsus8" path="res://Themes/blackfont38.tres" id="1_vmh38"]
[ext_resource type="Script" path="res://scripts/ui/stat_picker.gd" id="2_djuoi"]
[ext_resource type="PackedScene" uid="uid://duxcfh5gbg2mm" path="res://scenes/ui/stat_box.tscn" id="2_fqkpi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tcquk"]
bg_color = Color(0.360784, 0.631373, 0.313726, 1)

[node name="StatPicker" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vmh38")
script = ExtResource("2_djuoi")

[node name="HPBox" parent="." instance=ExtResource("2_fqkpi")]
layout_mode = 2
stat = "HP"

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="MPBox" parent="." instance=ExtResource("2_fqkpi")]
layout_mode = 2
stat = "MP"

[node name="MarginContainer2" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="MeleeBox" parent="." instance=ExtResource("2_fqkpi")]
layout_mode = 2
stat = "Melee"

[node name="MarginContainer3" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="MagicBox" parent="." instance=ExtResource("2_fqkpi")]
layout_mode = 2
stat = "Magic"

[node name="MarginContainer4" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="DefBox" parent="." instance=ExtResource("2_fqkpi")]
layout_mode = 2
stat = "Def"

[node name="MarginContainer5" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="MagDef" parent="." instance=ExtResource("2_fqkpi")]
layout_mode = 2
stat = "MagDef"

[node name="MarginContainer6" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Speed" parent="." instance=ExtResource("2_fqkpi")]
layout_mode = 2
stat = "Speed"

[node name="MarginContainer7" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="MPRegen" parent="." instance=ExtResource("2_fqkpi")]
layout_mode = 2
stat = "MP Regen"

[node name="MarginContainer8" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_tcquk")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Points to Spend:"

[node name="PointsAvailableLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Confirm" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "Confirm"

[node name="Buy" type="Button" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 35
text = "Buy for 50 c"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Buy" to="." method="_on_buy_pressed"]
